modifica JSON y endpoints
